# stm32-hello

./: .gitignore  AGENTS.md  README.md
CMakeHost/: CMakeLists.txt
CMakeHost/tests/: CMakeLists.txt  test_a4988.c  test_acelerometros.c  test_adc.c  test_btn8982.c  test_bts7960.c  test_debounce.c  test_display.c  test_dma.c  test_drv8825.c  test_drv8833.c  test_drv8871.c  test_drv8876.c  test_flash_devices.c  test_gpio.c  test_i2c.c  test_keypad.c  test_l293d.c  test_leds.c  test_mc33932.c  test_motor.c  test_rcc.c  test_realtime.c  test_rtc.c  test_sanity.c  test_sdcard.c  test_segments.c  test_sensors.c  test_sim900.c  test_spi.c  test_tb6612fng.c  test_tim.c  test_tmc2130.c  test_tmc2208.c  test_tmc2209.c  test_touch.c  test_usart.c  test_vnh2sp30.c  test_w25q64.c
stm32_repo/Drivers/: adc.c  adc.h  cm0.c  cm0.h  cm0_stub.c  debounce.c  debounce.h  dma.c  dma.h  gpio.c  gpio.h  gpio_af.h  i2c.c  i2c.h  irqn.h  keypad.c  keypad.h  rcc.c  rcc.h  rtc.c  rtc.h  sdcard.c  sdcard.h  spi.c  spi.h  tim.c  tim.h  usart.c  usart.h
stm32_repo/Drivers/Acelerometros/: adxl345.c  adxl345.h  adxl362.c  adxl362.h  bma280.c  bma280.h  bmi160.c  bmi160.h  icm20948.c  icm20948.h  lis3dh.c  lis3dh.h  lsm6ds3.c  lsm6ds3.h  mpu6050.c  mpu6050.h
stm32_repo/Drivers/Display/: display_examples.c  display_examples.h  hx8357.c  hx8357.h  ili9325.c  ili9325.h  ili9341.c  ili9341.h  ili9486.c  ili9486.h  lgdp4535.c  lgdp4535.h  r61509.c  r61509.h  ra8875.c  ra8875.h  s6d1121.c  s6d1121.h  ssd1963.c  ssd1963.h  st7789.c  st7789.h
stm32_repo/Drivers/Flash/: a25lq64.c  a25lq64.h  at25sf041.c  at25sf041.h  en25q64.c  en25q64.h  gd25q32.c  gd25q32.h  is25lp128.c  is25lp128.h  mx25l128.c  mx25l128.h  n25q032.c  n25q032.h  s25fl064l.c  s25fl064l.h  sst26vf064b.c  sst26vf064b.h  w25q64.c  w25q64.h
stm32_repo/Drivers/Leds/: apa102.c  apa102.h  sk6812.c  sk6812.h  ws2812.c  ws2812.h
stm32_repo/Drivers/Motor/: a4988.c  a4988.h  btn8982.c  btn8982.h  bts7960.c  bts7960.h  drv8825.c  drv8825.h  drv8833.c  drv8833.h  drv8871.c  drv8871.h  drv8876.c  drv8876.h  l293d.c  l293d.h  l298n.c  l298n.h  mc33932.c  mc33932.h  tb6612fng.c  tb6612fng.h  tmc2130.c  tmc2130.h  tmc2208.c  tmc2208.h  tmc2209.c  tmc2209.h  vnh2sp30.c  vnh2sp30.h
stm32_repo/Drivers/RealTime/: ds1307.c  ds1307.h  ds3231.c  ds3231.h  pcf8563.c  pcf8563.h  rtc_utils.h
stm32_repo/Drivers/Segments/: max7219.c  max7219.h  segments_examples.c  segments_examples.h  tm1637.c  tm1637.h
stm32_repo/Drivers/Sensores/: am2320.c  am2320.h  bme280.c  bme280.h  bme680.c  bme680.h  dht11.c  dht11.h  dht22.c  dht22.h  htu21d.c  htu21d.h  sht11.c  sht11.h  sht21.c  sht21.h  sht31.c  sht31.h  si7021.c  si7021.h
stm32_repo/Drivers/sim800/: sim800.c  sim800.h  sim800_call.c  sim800_call.h  sim800_cfg.h  sim800_cmds.h  sim800_dbg.c  sim800_dbg.h  sim800_ftp.c  sim800_ftp.h  sim800_http.c  sim800_http.h  sim800_pbk.c  sim800_pbk.h  sim800_port.c  sim800_port.h  sim800_port_map.h  sim800_sms.c  sim800_sms.h  sim800_sock.c  sim800_sock.h  sim800_ssl.c  sim800_ssl.h  sim800_urc.h  sim800_utf.c  sim800_utf.h
stm32_repo/Drivers/sim800/examples/: main_sim800_example.c
stm32_repo/Drivers/sim900/: sim900.c  sim900.h  sim900_call.c  sim900_call.h  sim900_cfg.h  sim900_cmds.h  sim900_dbg.c  sim900_dbg.h  sim900_http.c  sim900_http.h  sim900_pbk.c  sim900_pbk.h  sim900_port.h  sim900_sms.c  sim900_sms.h  sim900_sock.c  sim900_sock.h  sim900_urc.h  sim900_utf.c  sim900_utf.h
stm32_repo/Drivers/sim900/examples/: main_sim900_example.c
stm32_repo/Drivers/touch/: ads7843.c  ads7843.h  ar1021.c  ar1021.h  cy8ctma1036.c  cy8ctma1036.h  ft5406.c  ft5406.h  ft6206.c  ft6206.h  ft6236.c  ft6236.h  gt911.c  gt911.h  stmpe811.c  stmpe811.h  tsc2007.c  tsc2007.h  xpt2046.c  xpt2046.h
stm32_repo/Startup/: startup_stm32f070rbtx.s
