# CMakeHost/tests/CMakeLists.txt
add_executable(test_sanity test_sanity.c)
target_link_libraries(test_sanity PRIVATE core)
add_test(NAME sanity COMMAND test_sanity)

add_executable(test_spi test_spi.c)
target_link_libraries(test_spi PRIVATE core)
add_test(NAME spi COMMAND test_spi)

add_executable(test_rcc test_rcc.c)
target_link_libraries(test_rcc PRIVATE core)
add_test(NAME rcc COMMAND test_rcc)

add_executable(test_dma test_dma.c)
target_link_libraries(test_dma PRIVATE core)
add_test(NAME dma COMMAND test_dma)

add_executable(test_i2c test_i2c.c)
target_link_libraries(test_i2c PRIVATE core)
add_test(NAME i2c COMMAND test_i2c)

add_executable(test_rtc test_rtc.c)
target_link_libraries(test_rtc PRIVATE core)
add_test(NAME rtc COMMAND test_rtc)

add_executable(test_usart test_usart.c)
target_link_libraries(test_usart PRIVATE core)
add_test(NAME usart COMMAND test_usart)

add_executable(test_tim test_tim.c)
target_link_libraries(test_tim PRIVATE core)
add_test(NAME tim COMMAND test_tim)

add_executable(test_adc test_adc.c)
target_link_libraries(test_adc PRIVATE core)
add_test(NAME adc COMMAND test_adc)
add_executable(test_sensors test_sensors.c)
target_link_libraries(test_sensors PRIVATE core)
add_test(NAME sensors COMMAND test_sensors)

add_executable(test_display test_display.c)
target_link_libraries(test_display PRIVATE core)
add_test(NAME display COMMAND test_display)
add_executable(test_w25q64 test_w25q64.c)
target_link_libraries(test_w25q64 PRIVATE core)
add_test(NAME w25q64 COMMAND test_w25q64)

add_executable(test_flash_devices test_flash_devices.c)
target_link_libraries(test_flash_devices PRIVATE core)
add_test(NAME flash_devices COMMAND test_flash_devices)
add_executable(test_acelerometros test_acelerometros.c)
target_link_libraries(test_acelerometros PRIVATE core)
add_test(NAME acelerometros COMMAND test_acelerometros)
add_executable(test_leds test_leds.c)
target_link_libraries(test_leds PRIVATE core)
add_test(NAME leds COMMAND test_leds)
add_executable(test_realtime test_realtime.c)
target_link_libraries(test_realtime PRIVATE core)
add_test(NAME realtime COMMAND test_realtime)
add_executable(test_segments test_segments.c)
target_link_libraries(test_segments PRIVATE core)
add_test(NAME segments COMMAND test_segments)
add_executable(test_motor test_motor.c)
target_link_libraries(test_motor PRIVATE core)
add_test(NAME motor COMMAND test_motor)

add_executable(test_tb6612fng test_tb6612fng.c)
target_link_libraries(test_tb6612fng PRIVATE core)
add_test(NAME tb6612fng COMMAND test_tb6612fng)
add_executable(test_l293d test_l293d.c)
target_link_libraries(test_l293d PRIVATE core)
add_test(NAME l293d COMMAND test_l293d)
add_executable(test_drv8833 test_drv8833.c)
target_link_libraries(test_drv8833 PRIVATE core)
add_test(NAME drv8833 COMMAND test_drv8833)
add_executable(test_drv8871 test_drv8871.c)
target_link_libraries(test_drv8871 PRIVATE core)
add_test(NAME drv8871 COMMAND test_drv8871)
add_executable(test_drv8876 test_drv8876.c)
target_link_libraries(test_drv8876 PRIVATE core)
add_test(NAME drv8876 COMMAND test_drv8876)
add_executable(test_btn8982 test_btn8982.c)
target_link_libraries(test_btn8982 PRIVATE core)
add_test(NAME btn8982 COMMAND test_btn8982)
add_executable(test_vnh2sp30 test_vnh2sp30.c)
target_link_libraries(test_vnh2sp30 PRIVATE core)
add_test(NAME vnh2sp30 COMMAND test_vnh2sp30)
add_executable(test_mc33932 test_mc33932.c)
target_link_libraries(test_mc33932 PRIVATE core)
add_test(NAME mc33932 COMMAND test_mc33932)
add_executable(test_bts7960 test_bts7960.c)
target_link_libraries(test_bts7960 PRIVATE core)
add_test(NAME bts7960 COMMAND test_bts7960)
add_executable(test_a4988 test_a4988.c)
target_link_libraries(test_a4988 PRIVATE core)
add_test(NAME a4988 COMMAND test_a4988)
add_executable(test_drv8825 test_drv8825.c)
target_link_libraries(test_drv8825 PRIVATE core)
add_test(NAME drv8825 COMMAND test_drv8825)
add_executable(test_tmc2208 test_tmc2208.c)
target_link_libraries(test_tmc2208 PRIVATE core)
add_test(NAME tmc2208 COMMAND test_tmc2208)
add_executable(test_tmc2209 test_tmc2209.c)
target_link_libraries(test_tmc2209 PRIVATE core)
add_test(NAME tmc2209 COMMAND test_tmc2209)
add_executable(test_tmc2130 test_tmc2130.c)
target_link_libraries(test_tmc2130 PRIVATE core)
add_test(NAME tmc2130 COMMAND test_tmc2130)
